--- a/index.html
+++ b/index.html
@@ -8,13 +8,10 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/s2.css">
-    <link rel="stylesheet" type="text/css" href="css/slick.css" />
-    <link rel="stylesheet" type="text/css" href="css/slick-theme.css" />
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,600,400' rel='stylesheet' type='text/css'>
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 
-    <script type="text/javascript" src="js/slick.min.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
     <script type="text/javascript" src="js/s2.js"></script>
 </head>
@@ -29,8 +26,7 @@
             <a href="#header" class="active">ST-TRACS</a>
             <a href="#first-section">Contexte</a>
             <a href="#second-section">Présentation</a>
-            <a href="#third-section">Extras</a>
-            <a href="#fourth-section">Equipe</a>
+            <a href="#third-section">Equipe</a>
         </div>
         <div class="navbar-ico-resp" id="navbar-ico-resp">
         </div>
@@ -186,85 +182,7 @@
     </div>
 </section>
 
-<section class="content s3 container-fluid" id="third-section" style="background-color: #336633">
-    <h2>Extras</h2>
-
-    <div class="carousel">
-        <div class="carousel-slide">
-            <div class="row">
-                <img src="img/s3/menu.png" class="col-md-8" />
-
-                <div class="well col-md-3">
-                    <h3>Menu d'options</h3>
-
-                    <p>
-                        Des fonctionnalités supplémentaires sont disponibles via le menu d'options.
-                        On y accède par un bouton se situant dans le coin supérieur droit de l'application
-                    </p>
-                </div>
-            </div>
-        </div>
-        <div class="carousel-slide">
-            <div class="row">
-                <img src="img/s3/menu_select_device.png" class="col-md-8" />
-
-                <div class="well col-md-3">
-                    <h3>Select Device</h3>
-
-                    <p>
-                        Cette vue permet de se connecter à une puce GPS via Bluetooth.
-                    </p>
-                </div>
-            </div>
-        </div>
-        <div>
-            <div class="row">
-                <img src="img/s3/menu_playback.png" class="col-md-8" />
-
-                <div class="well col-md-3">
-                    <h3>Playback</h3>
-
-                    <p>
-                        L'application permet d'enregistrer le flux de messages bruts provenant d'une puce GPS.
-                        Il faut donc pouvoir les rejouer après enregistrement, ce que permet cette vue.
-                        Elle permet de plus de configurer la vitesse de lecture de l'enregistrement,
-                        et donne la possibilité à l'utilisateur de se déplacer à une position arbitraire du fichier.
-                    </p>
-                </div>
-            </div>
-        </div>
-        <div>
-            <div class="row">
-                <img src="img/s3/menu_upload.png" class="col-md-8" />
-
-                <div class="well col-md-3">
-                    <h3>Upload File</h3>
-
-                    <p>
-                        Cette vue est elle aussi en lien avec l'enregistrement de flux de messages provenant de la puce GPS.
-                        Elle permet d'envoyer l'enregistrement réalisé vers un serveur FTP distant.
-                    </p>
-                </div>
-            </div>
-        </div>
-        <div>
-            <div class="row">
-                <img src="img/s3/menu_settings.png" class="col-md-8" />
-
-                <div class="well col-md-3">
-                    <h3>Settings</h3>
-
-                    <p>
-                        Cette vue permet de configurer plusieurs aspects de l'application :
-                        système d'unité utilisé, paramètres liés aux positionnement, etc.
-                    </p>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-
-<section class="content team" id="fourth-section">
+<section class="content team" id="third-section">
     <h2>L'équipe</h2>
 
     <div class="table-responsive">
