--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <div class="bg-cover">
         <div class="header-content st-container" id="header-content">
             <h1>ST TRACS</h1>
+
             <h2>
                 <span class="header-first-letter">T</span>eseo
                 <span class="header-first-letter">R</span>eceiver
@@ -65,17 +66,25 @@
                 </div>
                 <div class="col-md-4 project-presentation-col">
                     <span class="icon-user-tie st-icon"></span>
+
                     <h3>Le client</h3>
+
                     <p>La division automobile de STMicroelectronics nous a sollicité pour répondre à un besoin réel de l'entreprise</p>
                 </div>
                 <div class="col-md-4 project-presentation-col">
                     <span class="icon-profile st-icon"></span>
+
                     <h3>Son besoin</h3>
-                    <p>L'entreprise veut tester sa solution de <strong>Dead Reckoning</strong>, une technologie offrant la possibilité de poursuivre la navigation assistée par GPS même lors de la perte des signaux satellites.</p>
+
+                    <p>L'entreprise veut tester sa solution de
+                        <strong>Dead Reckoning</strong>, une technologie offrant la possibilité de poursuivre la navigation assistée par GPS même lors de la perte des signaux satellites.
+                    </p>
                 </div>
                 <div class="col-md-4 project-presentation-col">
                     <span class="icon-mobile2 st-icon"></span>
+
                     <h3>La solution</h3>
+
                     <p>La solution envisagée est une application Android permettant aux collaborateurs de STMicroelectronics de visualiser les données GPS et Dead Reckoning renvoyées par la puce testée.</p>
                 </div>
             </div>
@@ -142,9 +151,9 @@
                 <div class="desc desc1">
                     <blockquote>
                         <ul>
-                            <li>Comparaison du positionnement via GPS et via le dead reckoning</li>
+                            <li>Comparaison entre la position obtenue via GPS et celle obtenue via Dead Reckoning</li>
                             <li>Graphes de comparaison des 2 types de positionnement</li>
-                            <li>Informations sur le dead reckoning</li>
+                            <li>Informations sur le Dead Reckoning</li>
                         </ul>
                     </blockquote>
                 </div>
@@ -152,7 +161,7 @@
                     <blockquote>
                         <ul>
                             <li>Informations précises sur chaque satellite capté</li>
-                            <li>Satellites classés par qualité du signal (CN0)</li>
+                            <li>Satellites classés par qualité de signal (CN0)</li>
                         </ul>
                     </blockquote>
                 </div>
@@ -166,14 +175,14 @@
                 <div class="desc desc4">
                     <blockquote>
                         <ul>
-                            <li>Précision du positionnement GPS (HDOP, PDOP)</li>
+                            <li>Informations générales sur le positionnement GPS (vitesse maximale, précision du positionnement, etc.)</li>
                         </ul>
                     </blockquote>
                 </div>
                 <div class="desc desc5">
                     <blockquote>
                         <ul>
-                            <li>Visualisation des données reçues</li>
+                            <li>Visualisation des données brutes provenant de la puce GPS</li>
                         </ul>
                     </blockquote>
                 </div>
@@ -191,51 +200,71 @@
                 <td><img src="img/teseo.png" />
 
                     <p>Bastien Baret</p>
+
                     <p class="fonction">Etudiant</p>
                 </td>
                 <td><img src="img/teseo.png" />
 
                     <p>Laura Guillemot</p>
+
                     <p class="fonction">Etudiante</p>
                 </td>
                 <td><img src="img/teseo.png" />
+
                     <p>Hyukchan Kwon</p>
+
                     <p class="fonction">Etudiant</p>
                 </td>
                 <td><img src="img/teseo.png" />
+
                     <p>Delphine Millet</p>
+
                     <p class="fonction">Etudiante</p>
                 </td>
             </tr>
             <tr>
                 <td><img src="img/teseo.png" />
+
                     <p>Thibault Rapin</p>
+
                     <p class="fonction">Etudiant</p>
                 </td>
                 <td><img src="img/teseo.png" />
+
                     <p>Mathieu Spegagne</p>
+
                     <p class="fonction">Etudiant</p>
                 </td>
                 <td><img src="img/teseo.png" />
+
                     <p>Oana Suciu</p>
+
                     <p class="fonction">Etudiante</p>
                 </td>
                 <td><img src="img/teseo.png" />
+
                     <p>Maxime Thébault</p>
+
                     <p class="fonction">Etudiant</p>
                 </td>
             </tr>
             <tr>
                 <td><img src="img/teseo.png" />
+
                     <p>Peggy Cellier</p>
+
                     <p class="fonction">Encadrante</p>
                 </td>
                 <td><img src="img/teseo.png" />
+
                     <p>Laurence Rozé</p>
+
                     <p class="fonction">Encadrante</p>
                 </td>
                 <td><img src="img/teseo.png" />
+
                     <p>Fabrice Deruy</p>
+
                     <p class="fonction">Client</p>
                 </td>
                 <td></td>
