Fix #70: English page

--- a/index_en.html
+++ b/index_en.html
@@ -24,9 +24,9 @@
 
         <div class="navbar-menu">
             <a href="#header" class="active">ST-TRACS</a>
-            <a href="#first-section">Contexte</a>
-            <a href="#second-section">Présentation</a>
-            <a href="#third-section">Equipe</a>
+            <a href="#first-section">Context</a>
+            <a href="#second-section">Overview</a>
+            <a href="#third-section">Team</a>
         </div>
         <div class="navbar-ico-resp" id="navbar-ico-resp">
         </div>
@@ -45,9 +45,9 @@
                 <span class="header-first-letter">S</span>uite
             </h2>
 
-            <p>Une application Android dédiée à l'analyse de données GPS & Dead Reckoning</p>
+            <p>An Android application dedicated to GPS & Dead Reckoning data analysis</p>
 
-            <a class="header-btn discover-btn" href="#first-section">Découvrir</a>
+            <a class="header-btn discover-btn" href="#first-section">Discover</a>
         </div>
         <div class="scroll-down">
             <a href="#first-section" class="discover-btn">
@@ -62,30 +62,30 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 project-presentation-description">
-                    <p>ST-TRACS est une application développée par 8 étudiants du département informatique de l'INSA de Rennes, en collaboration avec STMicroelectronics</p>
+                    <p>ST-TRACS is an application developped by 8 students from INSA Rennes' Computer Science department, in collaboration with STMicroelectronics</p>
                 </div>
                 <div class="col-md-4 project-presentation-col">
                     <span class="icon-user-tie st-icon"></span>
 
-                    <h3>Le client</h3>
+                    <h3>Client</h3>
 
-                    <p>La division automobile de STMicroelectronics nous a sollicité pour répondre à un besoin réel de l'entreprise</p>
+                    <p>STMicroelectronics' automotive unit was seeking assistance to address a real need</p>
                 </div>
                 <div class="col-md-4 project-presentation-col">
                     <span class="icon-profile st-icon"></span>
 
-                    <h3>Son besoin</h3>
+                    <h3>Requirement</h3>
 
-                    <p>L'entreprise veut tester sa solution de
-                        <strong>Dead Reckoning</strong>, une technologie offrant la possibilité de poursuivre la navigation assistée par GPS même lors de la perte des signaux satellites.
+                    <p>The company wants to test its
+                        <strong>Dead Reckoning</strong> solution, a technology giving the opportunity to continue GPS navigation even when satellite signals are lost.
                     </p>
                 </div>
                 <div class="col-md-4 project-presentation-col">
                     <span class="icon-mobile2 st-icon"></span>
 
-                    <h3>La solution</h3>
+                    <h3>Solution</h3>
 
-                    <p>La solution envisagée est une application Android permettant aux collaborateurs de STMicroelectronics de visualiser les données GPS et Dead Reckoning renvoyées par la puce testée.</p>
+                    <p>The intended solution is an Android application, allowing STMicroelectronics' employees to visualize GPS & Dead Reckoning data retrieved from the tested chip.</p>
                 </div>
             </div>
         </div>
@@ -93,7 +93,7 @@
 </section>
 
 <section class="content s2 container-fluid" id="second-section">
-    <h1 class="text-center">Présentation</h1>
+    <h1 class="text-center">Overview</h1>
 
     <h3>Skyview</h3>
 
@@ -105,8 +105,8 @@
                      data-toggle="popover"
                      data-trigger="manual"
                      data-placement="top"
-                     title="Tutoriel (1/3)"
-                     data-content="Il est possible de changer la vue en cliquant sur les onglets ci-dessous.">
+                     title="Tutorial (1/3)"
+                     data-content="The current view can be changed by clicking on the tabs below.">
 
                     <a href="#" data-id="0" data-title="Skyview"></a>
                     <a href="#" data-id="1" data-title="Dead Reckoning"></a>
@@ -119,16 +119,16 @@
                      data-toggle="popover"
                      data-placement="left"
                      data-trigger="manual"
-                     title="Tutoriel (2/3)"
-                     data-content="La partie gauche de chaque vue contient les informations principales">
+                     title="Tutorial (2/3)"
+                     data-content="The left side of each view holds the main information">
                     <div class="leftPanel"></div>
                     <div class="rightPanel"></div>
                     <div class="tuto3"
                          data-toggle="popover"
                          data-placement="right"
                          data-trigger="manual"
-                         title="Tutoriel (3/3)"
-                         data-content="Tandis que la partie droite contient des informations secondaires"></div>
+                         title="Tutorial (3/3)"
+                         data-content="Whereas the right side holds secondary information"></div>
                     <img class="i1" src="img/s2/gif/0.gif" alt="" />
                     <img class="i2" src="img/s2/gif/1.gif" alt="" />
                     <img class="hide" src="img/s2/gif/2.gif" alt="" />
@@ -143,7 +143,7 @@
                 <div class="desc desc0 current">
                     <blockquote>
                         <ul>
-                            <li>Visualisation des satellites visibles</li>
+                            <li>Visualization of available satellites</li>
                             <li>Orientation</li>
                         </ul>
                     </blockquote>
@@ -151,38 +151,38 @@
                 <div class="desc desc1">
                     <blockquote>
                         <ul>
-                            <li>Comparaison entre la position obtenue via GPS et celle obtenue via Dead Reckoning</li>
-                            <li>Graphes de comparaison des 2 types de positionnement</li>
-                            <li>Informations sur le Dead Reckoning</li>
+                            <li>Comparison between GPS and Dead Reckoning positions</li>
+                            <li>Charts help to visualize differences between the two technologies</li>
+                            <li>Information about Dead Reckoning</li>
                         </ul>
                     </blockquote>
                 </div>
                 <div class="desc desc2">
                     <blockquote>
                         <ul>
-                            <li>Informations précises sur chaque satellite capté</li>
-                            <li>Satellites classés par qualité de signal (CN0)</li>
+                            <li>Accurate information for each available satellite</li>
+                            <li>Satellites ranked by signal strength (CN0)</li>
                         </ul>
                     </blockquote>
                 </div>
                 <div class="desc desc3">
                     <blockquote>
                         <ul>
-                            <li>Vue GPS classique</li>
+                            <li>Classical GPS view</li>
                         </ul>
                     </blockquote>
                 </div>
                 <div class="desc desc4">
                     <blockquote>
                         <ul>
-                            <li>Informations générales sur le positionnement GPS (vitesse maximale, précision du positionnement, etc.)</li>
+                            <li>General information about GPS positioning (maximal speed, position accuracy, etc.)</li>
                         </ul>
                     </blockquote>
                 </div>
                 <div class="desc desc5">
                     <blockquote>
                         <ul>
-                            <li>Visualisation des données brutes provenant de la puce GPS</li>
+                            <li>Visualization of raw data retrieved from the GPS chip</li>
                         </ul>
                     </blockquote>
                 </div>
@@ -192,7 +192,7 @@
 </section>
 
 <section class="content team" id="third-section">
-    <h2>L'équipe</h2>
+    <h2>Team</h2>
 
     <div class="table-responsive">
         <table id="team-table" class="table team-presentation">
@@ -201,25 +201,25 @@
 
                     <p>Bastien Baret</p>
 
-                    <p class="fonction">Etudiant</p>
+                    <p class="fonction">Student</p>
                 </td>
                 <td><img src="img/teseo.png" />
 
                     <p>Laura Guillemot</p>
 
-                    <p class="fonction">Etudiante</p>
+                    <p class="fonction">Student</p>
                 </td>
                 <td><img src="img/teseo.png" />
 
                     <p>Hyukchan Kwon</p>
 
-                    <p class="fonction">Etudiant</p>
+                    <p class="fonction">Student</p>
                 </td>
                 <td><img src="img/teseo.png" />
 
                     <p>Delphine Millet</p>
 
-                    <p class="fonction">Etudiante</p>
+                    <p class="fonction">Student</p>
                 </td>
             </tr>
             <tr>
@@ -227,25 +227,25 @@
 
                     <p>Thibault Rapin</p>
 
-                    <p class="fonction">Etudiant</p>
+                    <p class="fonction">Student</p>
                 </td>
                 <td><img src="img/teseo.png" />
 
                     <p>Mathieu Spegagne</p>
 
-                    <p class="fonction">Etudiant</p>
+                    <p class="fonction">Student</p>
                 </td>
                 <td><img src="img/teseo.png" />
 
                     <p>Oana Suciu</p>
 
-                    <p class="fonction">Etudiante</p>
+                    <p class="fonction">Student</p>
                 </td>
                 <td><img src="img/teseo.png" />
 
                     <p>Maxime Thébault</p>
 
-                    <p class="fonction">Etudiant</p>
+                    <p class="fonction">Student</p>
                 </td>
             </tr>
             <tr>
@@ -253,13 +253,13 @@
 
                     <p>Peggy Cellier</p>
 
-                    <p class="fonction">Encadrante</p>
+                    <p class="fonction">Supervisor</p>
                 </td>
                 <td><img src="img/teseo.png" />
 
                     <p>Laurence Rozé</p>
 
-                    <p class="fonction">Encadrante</p>
+                    <p class="fonction">Supervisor</p>
                 </td>
                 <td><img src="img/teseo.png" />
 
