--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     <script type="text/javascript" src="js/app.js"></script>
     <script type="text/javascript" src="js/s2.js"></script>
+    <script type="text/javascript" src="js/scroll-section.js"></script>
 </head>
 <body>
 <nav class="st-navbar full" id="st-navbar">
@@ -32,7 +33,7 @@
         </div>
     </div>
 </nav>
-<section id="header">
+<section id="header" class="first">
     <div class="bg-cover">
         <div class="header-content st-container" id="header-content">
             <h1>ST-TRACS</h1>
@@ -191,7 +192,7 @@
     </div>
 </section>
 
-<section class="content team" id="third-section">
+<section class="content team last" id="third-section">
     <h2>L'équipe</h2>
 
     <div class="table-responsive">
