Last commit ? team section remastering

--- a/index_en.html
+++ b/index_en.html
@@ -14,6 +14,7 @@
 
     <script type="text/javascript" src="js/app.js"></script>
     <script type="text/javascript" src="js/s2.js"></script>
+    <script type="text/javascript" src="js/scroll-section.js"></script>
 </head>
 <body>
 <nav class="st-navbar full" id="st-navbar">
@@ -194,82 +195,84 @@
 <section class="content team" id="third-section">
     <h2>Team</h2>
 
-    <div class="table-responsive">
-        <table id="team-table" class="table team-presentation">
-            <tr>
-                <td><img src="img/teseo.png" />
+    <div class="row container team-presentation">
 
-                    <p>Bastien Baret</p>
+        <div class="col-md-3 col-xs-4 container">
+            <div class="profile student">
+                <p>Bastien Baret</p>
+                <p class="fonction">Student</p>
+            </div>
+        </div>
 
-                    <p class="fonction">Student</p>
-                </td>
-                <td><img src="img/teseo.png" />
+        <div class="col-md-3 col-xs-4 container">
+            <div class="profile student">
+                <p>Laura Guillemot</p>
+                <p class="fonction">Student</p>
+            </div>
+        </div>
 
-                    <p>Laura Guillemot</p>
+        <div class="col-md-3 col-xs-4 container">
+            <div class="profile student">
+                <p>Hyukchan Kwon</p>
+                <p class="fonction">Student</p>
+            </div>
+        </div>
 
-                    <p class="fonction">Student</p>
-                </td>
-                <td><img src="img/teseo.png" />
+        <div class="col-md-3 col-xs-4 container">
+            <div class="profile student">
+                <p>Delphine Millet</p>
+                <p class="fonction">Student</p>
+            </div>
+        </div>
 
-                    <p>Hyukchan Kwon</p>
+        <div class="col-md-3 col-xs-4 container">
+            <div class="profile student">
+                <p>Thibault Rapin</p>
+                <p class="fonction">Student</p>
+            </div>
+        </div>
 
-                    <p class="fonction">Student</p>
-                </td>
-                <td><img src="img/teseo.png" />
+        <div class="col-md-3 col-xs-4 container">
+            <div class="profile student">
+                <p>Mathieu Spegagne</p>
+                <p class="fonction">Student</p>
+            </div>
+        </div>
 
-                    <p>Delphine Millet</p>
+        <div class="col-md-3 col-xs-4 container">
+            <div class="profile student">
+                <p>Oana Suciu</p>
+                <p class="fonction">Student</p>
+            </div>
+        </div>
 
-                    <p class="fonction">Student</p>
-                </td>
-            </tr>
-            <tr>
-                <td><img src="img/teseo.png" />
+        <div class="col-md-3 col-xs-4 container">
+            <div class="profile student">
+                <p>Maxime Thébault</p>
+                <p class="fonction">Student</p>
+            </div>
+        </div>
 
-                    <p>Thibault Rapin</p>
+        <div class="col-md-3 col-xs-4 container">
+            <div class="profile teacher">
+                <p>Peggy Cellier</p>
+                <p class="fonction">Supervisor</p>
+            </div>
+        </div>
 
-                    <p class="fonction">Student</p>
-                </td>
-                <td><img src="img/teseo.png" />
+        <div class="col-md-3 col-xs-4 container">
+            <div class="profile teacher">
+                <p>Laurence Rozé</p>
+                <p class="fonction">Supervisor</p>
+            </div>
+        </div>
 
-                    <p>Mathieu Spegagne</p>
-
-                    <p class="fonction">Student</p>
-                </td>
-                <td><img src="img/teseo.png" />
-
-                    <p>Oana Suciu</p>
-
-                    <p class="fonction">Student</p>
-                </td>
-                <td><img src="img/teseo.png" />
-
-                    <p>Maxime Thébault</p>
-
-                    <p class="fonction">Student</p>
-                </td>
-            </tr>
-            <tr>
-                <td><img src="img/teseo.png" />
-
-                    <p>Peggy Cellier</p>
-
-                    <p class="fonction">Supervisor</p>
-                </td>
-                <td><img src="img/teseo.png" />
-
-                    <p>Laurence Rozé</p>
-
-                    <p class="fonction">Supervisor</p>
-                </td>
-                <td><img src="img/teseo.png" />
-
-                    <p>Fabrice Deruy</p>
-
-                    <p class="fonction">Client</p>
-                </td>
-                <td></td>
-            </tr>
-        </table>
+        <div class="col-md-3 col-xs-4 container">
+            <div class="profile client">
+                <p>Fabrice Deruy</p>
+                <p class="fonction">Client</p>
+            </div>
+        </div>
     </div>
 </section>
 
